2009-06-24  Martin Leidig  <mleidig@schlund.de>

	Added support for relative resolving of xincluded Pustefix
	property files.

2009-06-24  Sebastian Marsching <sebastian.marsching@1und1.de>

	Fixed maven.test.skip property for pustefix-sample1 project.

	Changed "build time property" mechanism to "runtime property" using
	a file from the classpath.
	
	Created basic support for Spring Dynamic Modules for OSGi.

2009-06-08  Martin Leidig  <mleidig@schlund.de>

	Optimized MD5 checksum creation for rendered HTML by using
	DigestOutputStream.

	Fixed NPE in trailinfo logging.

2009-06-08  Martin Leidig  <mleidig@schlund.de>

	Added RenderOutputListener support (output creation notification, 
	e.g. can be used for external content analysis). A listener has 
	to implement the according interface and can be configured using 
	a global property:
	<prop name="de.schlund.pfixxml.RenderOutputListener">mypackage.MyListener</prop>

2009-05-25  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:isVisible behaviour for non-existing pages: now -1 is
	returned again (instead of 1). Because looking if a page is configured
	doesn't mean that it is not existing (since we support static pages
	without context configuration), we additionally check if a target
	exists for pages which aren't configured.

2009-05-18  Martin Leidig  <mleidig@schlund.de>

	Added support for deferring image includes until runtime by setting
	the <pfx:image> or <pfx:xinp type="image"> element's 'level' attribute
	to 'runtime'. The 'src', 'themed-path', 'themed-img' and 'alt' values
	can be lately bound using the according <pfx:src>, <pfx:themed-path>,
	<pfx:themed-img> and <pfx:alt> elements, which are evaluated at
	runtime.

2009-05-15  Martin Leidig  <mleidig@schlund.de>

	Added support for inline-javascript compression. Compression can be
	enabled/disabled setting an according param in the global or
	standardpage section:
	<param name="compress-inline-javascript" value="true"/>